# fourier

./: .gitignore  CMakeLists.txt  README.md  fourier.pro
src/: common.cpp  common.h  commons.cpp  commons.h  decompose.cpp  decompose.h  dft.cpp  dft.h  filter.cpp  filter.h  generate.cpp  generate.h  logger.cpp  logger.h  main.cpp  wave.cpp  wave.h
